# rag-eval-foundations

./: .env.example  .gitignore  CLAUDE.md  E2E_TEST_REPORT.md  README.md  baseline_validation_report.md  data_loader.py  docker-compose.yml  golden_testset.json  langchain-eval-foundations-e2e.md  langchain-eval-foundations-e2e.py  langchain_eval_experiments.py  langchain_eval_foundations_e2e.py  langchain_eval_foundations_e2e_v2.py  langchain_eval_golden_testset.py  pyproject.toml  test_phase1.py
.claude/: tasks.yaml
claude_code_scripts/: run_rag_evaluation_pipeline.py
data/: llm-interaction-literature-review.md
diagrams/: README.md  architecture-overview.excalidraw  data-pipeline.excalidraw  pipeline.excalidraw  query.excalidraw
docs/: README.md  golden_testset_management_plan.md  ragas_phoenix_code_dependencies.md  ragas_phoenix_sequence_diagram.md
draft/: generate-golden_testset.py  langchain-eval-foundations-e2e alt.py  langchain-eval-foundations-phoenix-experiments.py
flows/: golden_testset_flow.py  golden_testset_flow_alternate.py  golden_testset_flow_prefect3.py
notebooks/: postgres_data_analysis.ipynb  validate_telemetry.ipynb
reports/: cost_tracking.json  execution_report_20250922_220938.json
schemas/: 01_core_tables.sql  02_indexes.sql  03_functions.sql  04_views.sql  05_sample_data.sql  golden_testset_schema.sql
scripts/: db_connection.py  db_migrate.py  generate_schema.py  rollback_schema.py  test_connection_pool.py
src/: __init__.py  config.py  data_loader.py  langchain_eval_experiments.py  langchain_eval_foundations_e2e.py  (+2 more)
(+79 files in other folders)
